--- a/prueba.css
+++ b/prueba.css
@@ -1,12 +1,12 @@
 #botonAutorizar{
 
-    background-color: #8B0000;
+    background-color: #ff5733;
 }
 
 .titulo {
 
     text-align: center;
-    color: #8B0000;
+    color: #ff5733;
     font-size: 33px;
 }
 
